# ai-agent-tender-collector

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: filters.yaml  recipients.example.yaml
src/tender_agent/: __init__.py  errors.py  filters.py  llm.py  logging.py  main.py  pipeline.py  settings.py  state.py  storage.py
src/tender_agent/emailer/: __init__.py  pdf.py  recipients.py  report.py  sender.py
src/tender_agent/emailer/templates/: report.html.j2
src/tender_agent/prozorro/: __init__.py  client.py  models.py
tests/: conftest.py  test_ci_workflow.py  test_client.py  test_errors.py  test_filters.py  test_llm.py  test_logging.py  test_main.py  test_models.py  test_pdf.py  test_pipeline.py  test_recipients.py  test_report.py  test_sender.py  test_settings.py  test_storage.py
