[project]
name = "tender-agent"
version = "0.1.0"
description = "AI agent that collects Ukrainian automotive-chemistry tenders from PROZORRO and emails a daily report."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "langgraph>=0.2.50",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-perplexity>=0.1.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "apscheduler>=3.10.0",
    "tenacity>=8.3.0",
    "structlog>=24.1.0",
    "email-validator>=2.1.0",
]

[project.scripts]
tender-agent = "tender_agent.main:main"

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "types-pyyaml>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tender_agent"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]

[tool.mypy]
python_version = "3.12"
packages = ["tender_agent"]
mypy_path = "src"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["apscheduler.*", "langgraph.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=tender_agent --cov-report=term-missing"

[tool.coverage.run]
source = ["src/tender_agent"]

[tool.coverage.report]
fail_under = 85
